Bump versions, upgrade to java 25